--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/png"
       href="assets/images/favicon.png"
     />
-    <title>Nozze - Wedding & Wedding Planner HTML5 Template</title>
+    <title>Hairul & Fauziyyah Wedding</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <link href="assets/css/flaticon.css" rel="stylesheet" />
