--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="/src/assets/js/modernizr.custom.js"></script>
+    <script src="/src/assets/js/moving-animation.js"></script> -->
+    <!-- <script src="/src/assets/js/script.js"></script> -->
   </body>
 </html>
