--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="wpOceans" />
+    <meta name="author" content="Hairul Ardhan Nawazaki" />
     <link
       rel="shortcut icon"
       type="image/png"
-      href="assets/images/favicon.png"
+      href="/assets/images/favicon.png"
     />
     <title>Hairul & Fauziyyah Wedding</title>
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/flaticon.css" rel="stylesheet" />
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/magnific-popup.css" rel="stylesheet" />
     <link href="assets/css/animate.css" rel="stylesheet" />
@@ -32,7 +30,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- <script src="/src/assets/js/modernizr.custom.js"></script>
-    <script src="/src/assets/js/moving-animation.js"></script> -->
-    <!-- <script src="/src/assets/js/script.js"></script> -->
+   <script src="/src/assets/js/script.js"></script> -->
   </body>
 </html>
